change default upload timeout connection to 30 minutes

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 uwsgi-socket = 0.0.0.0:8000
-http-socket = 0.0.0.0:8001
+#http-socket = 0.0.0.0:8001
 pidfile = /tmp/geonode.pid
 
 chdir = /usr/src/geonode/
@@ -13,6 +13,11 @@ vacuum = true                        ; Delete sockets during shutdown
 single-interpreter = true
 die-on-term = true                   ; Shutdown when receiving SIGTERM (default is respawn)
 need-app = true
+
+# logging
+# path to where uwsgi logs will be saved
+uwsgi-timeout = 1800
+socket-timeout = 1800
 
 # logging
 # path to where uwsgi logs will be saved
