set uploading timeout to 1 hour

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -18,6 +18,7 @@ need-app = true
 # path to where uwsgi logs will be saved
 uwsgi-timeout = 1800
 socket-timeout = 1800
+http-timeout = 3600000
 
 # logging
 # path to where uwsgi logs will be saved
