fixing responsive layout

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,7 +7,7 @@ chdir = /usr/src/geonode/
 module = geonode.wsgi:application
 
 strict = false
-master = true
+lazy-apps = true
 enable-threads = true
 vacuum = true                        ; Delete sockets during shutdown
 single-interpreter = true
@@ -16,8 +16,8 @@ need-app = true
 
 # logging
 # path to where uwsgi logs will be saved
-uwsgi-timeout = 1800
-socket-timeout = 1800
+uwsgi-timeout = 3600000
+socket-timeout = 3600000
 http-timeout = 3600000
 
 # logging
@@ -27,7 +27,7 @@ logto = /var/log/geonode.log
 touch-reload = /usr/src/geonode/geonode/wsgi.py
 buffer-size = 32768
 
-harakiri = 1800                        ; forcefully kill workers after 1800 seconds
+harakiri = 3600                      ; forcefully kill workers after 3600 seconds / 1 hour
 py-callos-afterfork = true           ; allow workers to trap signals
 
 max-requests = 1000                  ; Restart workers after this many requests
@@ -42,12 +42,14 @@ cheaper-initial = 16                 ; Workers created at startup
 cheaper-overload = 1                 ; Length of a cycle in seconds
 cheaper-step = 16                    ; How many workers to spawn at a time
 
-cheaper-busyness-multiplier = 30     ; How many cycles to wait before killing workers
-cheaper-busyness-min = 20            ; Below this threshold, kill workers (if stable for multiplier cycles)
-cheaper-busyness-max = 70            ; Above this threshold, spawn new workers
+cheaper-busyness-multiplier = 60     ; How many cycles to wait before killing workers
+cheaper-busyness-min = 50            ; Below this threshold, kill workers (if stable for multiplier cycles)
+cheaper-busyness-max = 100            ; Above this threshold, spawn new workers
 cheaper-busyness-backlog-alert = 16  ; Spawn emergency workers if more than this many requests are waiting in the queue
 cheaper-busyness-backlog-step = 2    ; How many emergency workers to create if there are too many requests in the queue
 
 # daemonize = /var/log/uwsgi/geonode.log
 # cron = -1 -1 -1 -1 -1 /usr/local/bin/python /usr/src/{{project_name}}/manage.py collect_metrics -n
-cron = -1 -1 -1 -1 -1 /usr/local/bin/python /usr/src/geonode/manage.py collect_metrics -n
+# cron = -1 -1 -1 -1 -1 /usr/local/bin/python /usr/src/geonode/manage.py collect_metrics -n
+cron = 0 0 -1 -1 -1 sh -c 'find /backup_restore/ -maxdepth 1 -type f -mtime +30 -printf "%T@ %p\n" | sort -n | head -n -3 | awk "{ print $2 }" | xargs -r rm'
+cron = 0 0 -1 -1 -1 sh -c 'find /backup_restore/ -type d -ctime +30 -exec rm -rf {} \;'
