changing UI & base metadata

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -23,6 +23,8 @@ http-timeout = 3600000
 # logging
 # path to where uwsgi logs will be saved
 logto = /var/log/geonode.log
+log-5xx = true
+disable-logging = true
 
 touch-reload = /usr/src/geonode/geonode/wsgi.py
 buffer-size = 32768
