--- a/scripts/docker/env/production/db.env
+++ b/scripts/docker/env/production/db.env
@@ -1,8 +1,8 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-GEONODE_DATABASE=geonode
-GEONODE_DATABASE_PASSWORD=geonode
-GEONODE_GEODATABASE=geonode_data
-GEONODE_GEODATABASE_PASSWORD=geonode_data
+POSTGRES_USER=sdi
+POSTGRES_PASSWORD=WRIenterprise!!!
+GEONODE_DATABASE=sdi
+GEONODE_DATABASE_PASSWORD=WRIcms123@
+GEONODE_GEODATABASE=enterprise
+GEONODE_GEODATABASE_PASSWORD=WRIenterprise!!!
 GEONODE_DATABASE_SCHEMA=public
 GEONODE_GEODATABASE_SCHEMA=public
